--- a/index.html
+++ b/index.html
@@ -983,7 +983,7 @@ src="https://www.facebook.com/tr?id=1188814919377145&ev=PageView&noscript=1"
 
                 if (country === 'KH' || country === 'CN') {
                     registerBtns.forEach(btn => {
-                        if (btn) btn.href = 'https://good.com/en';
+                        if (btn) btn.href = 'https://97y.me/5FhUL';
                     });
                 }
 
